# conjurer

./: .gitignore  Cargo.toml  README.md
src/: main.rs  templates.rs
templates/cpp/: CMakeLists.txt  conjurer.toml  main.cpp
templates/odin/: conjurer.toml  main.odin
